--- a/popup.html
+++ b/popup.html
@@ -46,7 +46,7 @@
           <label for="noteUrl">网址</label>
           <input type="text" id="noteUrl" placeholder="自动填充当前页面网址">
         </div>
-        <div class="form-group">
+        <div class="form-group form-group-textarea">
           <label for="noteText">文本内容</label>
           <textarea id="noteText" rows="6" placeholder="输入或粘贴文本内容..."></textarea>
         </div>
