modify code & design

--- a/popup.html
+++ b/popup.html
@@ -215,6 +215,7 @@
     </div>
   </div>
 
+  <script src="backup-handle-storage.js"></script>
   <script src="storage.js"></script>
   <script src="image-storage.js"></script>
   <script src="error-handler.js"></script>
