--- a/backup-picker.html
+++ b/backup-picker.html
@@ -4,65 +4,77 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>选择备份文件夹</title>
+  <link rel="stylesheet" href="popup.css">
   <style>
     body {
-      font-family: "Microsoft YaHei", "PingFang SC", sans-serif;
-      background: #f7f7fb;
-      color: #333;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+      width: 400px;
+      min-height: 300px;
+      background: #f5f5f5;
       margin: 0;
-      padding: 24px;
+      padding: 0;
     }
-    .card {
-      background: #fff;
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
+    .container {
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
     }
-    h1 {
+    .header {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: white;
+      padding: 16px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .header h1 {
       font-size: 18px;
-      margin: 0 0 8px 0;
+      font-weight: 600;
+      margin: 0;
     }
-    p {
-      font-size: 13px;
+    .content {
+      flex: 1;
+      padding: 24px;
+      background: white;
+      display: flex;
+      flex-direction: column;
+    }
+    .content p {
+      font-size: 14px;
       color: #666;
-      margin: 0 0 16px 0;
-      line-height: 1.5;
+      margin: 0 0 20px 0;
+      line-height: 1.6;
     }
     .actions {
       display: flex;
-      gap: 12px;
-    }
-    button {
-      border: none;
-      border-radius: 8px;
-      padding: 10px 16px;
-      font-size: 14px;
-      cursor: pointer;
-    }
-    .primary {
-      background: #667eea;
-      color: #fff;
-    }
-    .secondary {
-      background: #eef1ff;
-      color: #3b4cca;
+      gap: 8px;
+      justify-content: flex-end;
+      margin-top: auto;
     }
     .status {
       margin-top: 12px;
       font-size: 12px;
       color: #999;
+      min-height: 18px;
+    }
+    .status.error {
+      color: #d93025;
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h1>选择备份文件夹</h1>
-    <p>浏览器限制侧边栏内无法弹出文件夹选择器，请在此窗口完成选择。</p>
-    <div class="actions">
-      <button class="primary" id="pickFolderBtn">选择文件夹</button>
-      <button class="secondary" id="closeBtn">关闭</button>
+  <div class="container">
+    <div class="header">
+      <h1>选择备份文件夹</h1>
     </div>
-    <div class="status" id="status"></div>
+    <div class="content">
+      <p>由于浏览器限制，侧边栏无法直接打开文件夹选择器。请在此窗口中选择要用于备份的文件夹。</p>
+      <div class="actions">
+        <button class="btn-secondary" id="closeBtn">取消</button>
+        <button class="btn-primary" id="pickFolderBtn">选择文件夹</button>
+      </div>
+      <div class="status" id="status"></div>
+    </div>
   </div>
 
   <script src="backup-handle-storage.js"></script>
