--- a/popup.html
+++ b/popup.html
@@ -53,6 +53,10 @@
         </div>
       </div>
 
+      <div class="library-categories" id="libraryCategories">
+        <!-- 分类按钮将在这里动态生成 -->
+      </div>
+
       <div class="library-list" id="libraryList">
         <!-- 文档库列表将在这里显示 -->
       </div>
