--- a/sidebar.html
+++ b/sidebar.html
@@ -23,13 +23,36 @@
           </div>
         </div>
         <div class="header-actions">
-          <button id="positionBtn" class="btn-icon" title="切换位置">⇄</button>
-          <button id="importBtn" class="btn-icon" title="导入数据">📤</button>
-          <button id="restoreBtn" class="btn-icon" title="恢复数据">🔄</button>
-          <button id="exportBtn" class="btn-icon" title="导出数据">📥</button>
-          <button id="backupSettingsBtn" class="btn-icon" title="备份设置">💾</button>
-          <button id="clearAllBtn" class="btn-icon btn-icon-danger" title="清空所有数据">🗑️</button>
           <button id="addNoteBtn" class="btn-icon" title="添加笔记">+</button>
+          <div class="more-actions-wrapper">
+            <button id="moreActionsBtn" class="btn-icon" title="更多操作">⋮</button>
+            <div class="more-actions-menu" id="moreActionsMenu">
+              <button class="menu-item" id="positionBtn">
+                <span class="menu-icon">⇄</span>
+                <span class="menu-text">切换位置</span>
+              </button>
+              <button class="menu-item" id="exportBtn">
+                <span class="menu-icon">📥</span>
+                <span class="menu-text">导出数据</span>
+              </button>
+              <button class="menu-item" id="importBtn">
+                <span class="menu-icon">📤</span>
+                <span class="menu-text">导入数据</span>
+              </button>
+              <button class="menu-item" id="restoreBtn">
+                <span class="menu-icon">🔄</span>
+                <span class="menu-text">恢复数据</span>
+              </button>
+              <button class="menu-item" id="backupSettingsBtn">
+                <span class="menu-icon">💾</span>
+                <span class="menu-text">备份设置</span>
+              </button>
+              <button class="menu-item menu-item-danger" id="clearAllBtn" style="display: none;">
+                <span class="menu-icon">🗑️</span>
+                <span class="menu-text">清空所有数据</span>
+              </button>
+            </div>
+          </div>
           <button id="closeBtn" class="btn-icon" title="关闭">×</button>
         </div>
       </header>
@@ -68,6 +91,10 @@
             <div class="stat-value" id="storageSize">0 KB</div>
             <div class="stat-label">存储大小</div>
           </div>
+        </div>
+
+        <div class="library-categories" id="libraryCategories">
+          <!-- 分类按钮将在这里动态生成 -->
         </div>
 
         <div class="library-list" id="libraryList">
